# parley-lang

./: .gitignore  DESIGN.md  HANDOFF.md  LICENSE  PRODUCT.md  README.md  index.html  main.js  pyproject.toml  registry.json
benchmarks/: README.md  measure.py  prompts.py  runlog.py  tasks.json
benchmarks/python/: calculator.py  enums_match.py  file_stats.py  fizzbuzz.py  guessing_game.py  hello.py  higher_order.py  lists_and_maps.py  records.py  todo.py
benchmarks/rust/: calculator.rs  enums_match.rs  file_stats.rs  fizzbuzz.rs  guessing_game.rs  hello.rs  higher_order.rs  lists_and_maps.rs  records.rs  todo.rs
docs/: DOMAINS.md  ERRORS.md  REFERENCE.md  RELEASE.md  RESEARCH.md  SPEC.md  TUTORIAL.md
examples/: calculator.par  closures.par  enums_match.par  file_stats.par  fizzbuzz.par  guessing_game.par  hello.par  higher_order.par  lists_and_maps.par  records.par  todo.par
parley/: __init__.py  ast_nodes.py  checker.py  cli.py  diagnostics.py  emit_rust.py  grammar.lark  lsp.py  parser.py
parley/stdlib/: __init__.py
parley/stdlib/std/: __init__.py  list.par  map.par  math.par  text.par
scripts/: deploy_pages.sh
site/: 404.html  index.html  main.js  registry.json  style.css
skill/parley/: SKILL.md
tests/: conftest.py  test_benchmarks.py  test_checker.py  test_cli.py  test_diagnostics.py  test_e2e.py  test_emit.py  test_lsp.py  test_packages.py  test_parser.py
