[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "parley-lang"
version = "0.3.106"
description = "Speak plainly, ship native binaries — an English-like compiled language for AI agents"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "Arjun Avtani" }]
keywords = ["compiler", "language", "ai-agents", "rust", "transpiler"]
dependencies = ["lark>=1.1"]

[project.urls]
Homepage = "https://ded-furby.github.io/parley-lang/"
Source = "https://github.com/ded-furby/parley-lang"
Documentation = "https://github.com/ded-furby/parley-lang/tree/main/docs"
Issues = "https://github.com/ded-furby/parley-lang/issues"

[project.scripts]
parley = "parley.cli:main"
parley-lsp = "parley.lsp:main"

[project.optional-dependencies]
dev = ["pytest>=8"]
publish = ["build>=1", "twine>=5"]
research = ["tiktoken>=0.7"]

[tool.setuptools]
packages = ["parley", "parley.stdlib", "parley.stdlib.std"]

[tool.setuptools.package-data]
parley = ["grammar.lark"]
"parley.stdlib.std" = ["*.par"]

[tool.pytest.ini_options]
testpaths = ["tests"]
